overflow hidden on CollapseAnimator content, now works correctly but lack styling and details

--- a/src/Components/CollapseAnimator/collapse-animator.scss
+++ b/src/Components/CollapseAnimator/collapse-animator.scss
@@ -1,8 +1,9 @@
 .collapse-animator-wrapper {
-  wrapper {
-    border: 1px dotted red;
-  }
   border: 2px dotted red;
+
+  overflow: hidden;
+  .content-div-asdf {
+  }
 
 }
 
